--- a/gentoo.org
+++ b/gentoo.org
@@ -128,8 +128,9 @@ app-editors/emacs xft json
 emerge -a sys-process/htop
 #+end_src
 
-* Gentoo usage
-** Update world
+Gentoo usage
+** Package management(portage/emerge/equery/...)
+*** Update world
 #+begin_src
 # sync
 emerge-webrsync
@@ -138,6 +139,22 @@ emerge -auDNtvF @world
 # update
 emerge -auDNtv @world
 #+end_src
+*** Add something to config files
+**** to omit mask
+1. add a file to _/etc/portage/package.accept_keywords/_, let's say _manual_
+2. if we want to omit ~amd64 for package x11-wm/xmonad, then append `x11-wm/xmonad ~amd64` to manual
+**** change use
+1. add a file to _/etc/portage/package.use/_, let's say _manual_
+2. if we want to add use of _rar_, and remove wxwidgets to _app-arch/p7zip_, then append `app-arch/p7zip rar -wxwidgets` to manual
+
+*** Patching
+Put patch in path _/etc/portage/patches/[package_path-x.x.x]_
+
+#+begin_example
+# while patching for libxft
+/etc/portage/patches/x11-libs/libXft-x.x.x(version, i.e., x.x.x, is optional)
+#+end_example
+
 ** Packages to install
 *** figlet
 *** neofetch
@@ -239,15 +256,15 @@ mon->cl->clients;
 **** DONE memory
 **** TODO cpu usage
 **** TODO blutooth status
-**** TODO wifi status
+**** DONE wifi status
 **** DONE click to show htop
 **** DONE click to show weather
 **** DONE click to show folder
 **** DONE emoji
-see this link https://forums.gentoo.org/viewtopic-p-8617575.html
+see this link   https://forums.gentoo.org/viewtopic-p-8617575.html
 
 1. get this patch https://gitlab.freedesktop.org/xorg/lib/libxft/-/merge_requests/1.patch
-2. Put patch in /etc/portage/patches/x11-libs/libXft-2.3.4 (whatever version is used, if the folder not exists, create it) and rebuild libXft package
+2. Put patch in */etc/portage/patches/x11-libs/libXft* (whatever version is used, if the folder not exists, create it) and rebuild libXft package
 3. install font noto-emoji, twemoji
    twemoji has the flags, but there is some problem of show multiple-byte emoji while the prefix is also an valid emoji
    https://github.com/eosrei/twemoji-color-font
@@ -377,6 +394,20 @@ save config, to allow automatic connect
 #+begin_src bash
 save_config
 #+end_src
+**** query
+when there are multiple netowork card(both ether and wifi), to show current routing strategy
+
+=:results output= allow the results to be plain text, instead of a table
+
+#+begin_src bash :results output
+ip route
+#+end_src
+
+#+RESULTS:
+: default via 192.168.3.1 dev wlp61s0 proto dhcp src 192.168.3.6 metric 3003
+: 192.168.3.0/24 dev wlp61s0 proto dhcp scope link src 192.168.3.6 metric 3003
+
+check the script 'file:~/Dshow_network'
 
 *** power management / lock
 **** TODO disable screensaver when playing videos
